--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -22,7 +22,8 @@
   }
 
 \title{Accelerating package expansion in Rust through development of a semantic versioning tool}
-\titlepl{Przyspieszenie rozwoju pakietów w języku Rust poprzez rozbudowę narzędzia do semantycznego wersjonowania}
+\titlepl{Przyspieszenie rozwoju pakietów w języku Rust poprzez rozbudowę narzędzia do
+	semantycznego wersjonowania}
 \keywords{Rust, semantic versioning, continuous integration, package manager}
 
 \begin{document}
@@ -79,39 +80,34 @@ TODO:
 \chapter*{Introduction}
 \addcontentsline{toc}{chapter}{Introduction}
 
-Rust is a relatively new language that has lately been gaining on popularity.
-Amongst its standard development toolchain there is a software called cargo
--- Rust's build system and package manager,
-which handles building a crate -- a package with Rust code.
-One of cargo's responsibilities is to search for the newest crate versions,
-download them and build dependencies
-(that is, other libraries / crates that the code uses).
+Rust is a relatively new language that has lately been gaining on popularity. Amongst its standard
+development toolchain there is a software called cargo -- Rust's build system and package manager,
+which handles building a crate -- a package with Rust code. One of cargo's responsibilities is to
+search for the newest crate versions, download them and build dependencies (that is, other
+libraries / crates that the code uses).
 
-Cargo assumes that all crates follow semantic versioning
--- a set of rules that decide when it is safe to use the new version of a library
-without any problems (the projects that depend on this library must still compile).
-Thanks to that, developers of libraries can release patches and bugfixes
-and cargo by default will automatically use those newest releases.
-The exact definition of semantic versioning is explained in chapter \ref{r:chapter_definitions}.
+Cargo assumes that all crates follow semantic versioning -- a set of rules that decide when it is
+safe to use the new version of a library without any problems (the projects that depend on this
+library must still compile). Thanks to that, developers of libraries can release patches and
+bugfixes and cargo by default will automatically use those newest releases. The exact definition of
+semantic versioning is explained in chapter \ref{r:chapter_definitions}.
 
-It turns out that it is not obvious which changes are backwards-compatible
-and which are not. There are numerous examples (listed in \ref{r:section_usageofsemver})
-where experienced Rust developers made a mistake
-(due to insufficient knowledge about the language or by overlooking something)
-that changed the public API (Application Programming Interface) of a library in such a way that
-users' code stopped compiling.
+It turns out that it is not obvious which changes are backwards-compatible and which are not.
+There are numerous examples (listed in \ref{r:section_usageofsemver}) where experienced Rust
+developers made a mistake (due to insufficient knowledge about the language or by overlooking
+something) that changed the public API (Application Programming Interface) of a library in such
+a way that users' code stopped compiling.
 
-The authors of this thesis present their work on a tool that detects and notifies about
-a subset of problems that make Rust libraries' public API non-backwards compatible,
-with the goal to make problems with semantic versioning less frequent in the Rust community.
-The exact goals of this project are described in chapter \ref{r:chapter_vision}.
+The authors of this thesis present their work on a tool that detects and notifies about a subset of
+problems that make Rust libraries' public API non-backwards compatible, with the goal to make
+problems with semantic versioning less frequent in the Rust community. The exact goals of this
+project are described in chapter \ref{r:chapter_vision}.
 
-The project is open-source -- all of the authors' work is visible in public repositories
-(listed in \ref{r:section_projectstructure}). The project existed before their contributions,
-thus chapter \ref{r:chapter_implementation} mainly describes how they have
-extended the project's functionalities and fixed its issues.
-Chapter \ref{r:chapter_evaluation} is a summary of their results and the project's impact
-on the Rust community.
+The project is open-source -- all of the authors' work is visible in public repositories (listed in
+\ref{r:section_projectstructure}). The project existed before their contributions, thus chapter
+\ref{r:chapter_implementation} mainly describes how they have extended the project's
+functionalities and fixed its issues. Chapter \ref{r:chapter_evaluation} is a summary of their
+results and the project's impact on the Rust community.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %             Definitions             %
@@ -374,8 +370,10 @@ move away from the faulty release.
 Some of popular Rust crates with millions of downloads happened to break semver:
 \begin{itemize}
     \item {\ttfamily pyo3 v0.5.1} accidentally changed a function signature \cite{pyo3-issue}
-    \item {\ttfamily clap v3.2.0} accidentally had a type stop implementing an auto-trait \cite{clap-issue}
-    \item multiple {\ttfamily block-buffer} versions accidentally broke their MSRV contract \cite{block-buffer-issue}
+    \item {\ttfamily clap v3.2.0} accidentally had a type stop implementing an auto-trait
+		\cite{clap-issue}
+    \item multiple {\ttfamily block-buffer} versions accidentally broke their MSRV contract
+		\cite{block-buffer-issue}
     \item and many more. We have developed a script that scans all releases for semver breaks we
 		can detect. The results are covered in section \ref{r:section_scanning_script}
 \end{itemize}
