--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -574,7 +574,7 @@ TODO:
 
 \section{cargo-semver-checks}
 Cargo-semver-checks is a tool designed to detect semantic versioning violations within Rust crates.
-To do so, the new version of the crate undergoes multiple lint checks, which are meant to find
+To do so, a new version of a crate undergoes multiple lint checks, which are meant to find
 public API changes between the base and new version of the crate. All of the data needed to compare
 the two versions is retrieved from rustdoc using Trustfall, which allows to introduce a layer
 of abstraction that remains constant (functions, structs, enums, variants etc.). To learn about the
