--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -573,7 +573,7 @@ TODO:
 \end{itemize}
 
 \section{cargo-semver-checks}
-Cargo-semver-checks is a tool designed to detect semantic versioning violations within Rust crates.
+Cargo-semver-checks is a CLI tool for detecting semantic versioning violations within Rust crates.
 To do so, a new version of a crate undergoes multiple lint checks, which are meant to find
 public API changes between the base and new version of the crate. All of the data needed to compare
 the two versions is retrieved from rustdoc using Trustfall, which allows to introduce a layer
