--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -578,7 +578,7 @@ To do so, a new version of a crate undergoes multiple lint checks, which are mea
 public API changes between the base and new version of the crate. All of the data needed to compare
 the two versions is retrieved from rustdoc using Trustfall, which allows to introduce a layer
 of abstraction that remains constant (functions, structs, enums, variants etc.). To learn about the
-tool's practical usage and destiny, see chapter \ref{r:chapter_vision}.
+tool's practical usage and long-term goals, see chapter \ref{r:chapter_vision}.
 
 \section{trustfall-rustdoc-adapter}
 
