revert Conclusion movement.

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -652,6 +652,13 @@ TODO:
 	\item describe how the code changed to be more welcoming for next contributors
 \end{itemize}
 
+\section{Conclusion}
+
+TODO:
+\begin{itemize}
+	\item write a conclusion
+\end{itemize}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                Team                 %
@@ -909,16 +916,6 @@ and immediate contact with him through chat).
 		\end{itemize}
 \end{itemize}
 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%             Conclusion              %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Conclusion}\label{r:chapter_conclusion}
-
-TODO:
-\begin{itemize}
-	\item write a conclusion
-\end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %            Bibliography             %
